# login-system

./: .gitignore  login-system_uwsgi.ini  main.py  pyproject.toml  uwsgi_params
app/: __init__.py  settings.py  urls.py
app/templates/: base.html
users/: forms.py  managers.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers_alter_customuser_email.py  0003_customuser_is_verified_alter_customuser_email_and_more.py  0004_otptoken_url_code_alter_otptoken_otp_code.py  0005_alter_otptoken_otp_code_alter_otptoken_url_code.py  0006_alter_otptoken_otp_code_and_more.py  0007_remove_otptoken_url_code_alter_otptoken_otp_code_and_more.py  0008_alter_otptoken_otp_code_and_more.py  0009_alter_otptoken_otp_code_and_more.py
users/templates/: forgot_password.html  login.html  login_register.html  resend_code.html  signup.html  success_login.html  update_password.html  verify_email.html
