[project]
name = "login-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.1",
    "django-ratelimit>=4.1.0",
    "mysqlclient>=2.2.8",
    "python-dotenv>=1.2.1",
    "redis>=7.3.0",
    "uwsgi>=2.0.31",
]
